# fullstack-shop

./: .gitignore  docker-compose.yml
backend/: .gitignore  README.md  docker-compose.yml  dockerfile  manage.py  pyproject.toml
backend/src/: config.py  conftest.py  container.py  fixtures.py  main.py
backend/src/accounts/: models.py  serializers.py  views.py
backend/src/accounts/management/commands/: createadmin.py
backend/src/accounts/migrations/: 0001_initial.py
backend/src/api/: dependencies.py
backend/src/api/v1/: urls.py
backend/src/api/v1/debug/: views.py
backend/src/api/v1/products/: filters.py  router.py  serializers.py  views.py
backend/src/apps/accounting/: service.py
backend/src/apps/base/: tasks.py
backend/src/apps/notifications/: services.py  tasks.py
backend/src/apps/notifications/tests/: test_services.py
backend/src/apps/products/: models.py  repositories.py  services.py
backend/src/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_slug_and_more.py  0002_alter_product_slug.py  0003_alter_product_options_alter_product_created_at.py
backend/src/apps/products/tests/: test_models.py  test_repositories.py  test_services.py
backend/src/base/: repositories.py  uows.py
backend/src/config/: celery.py  containers.py  settings.py  urls.py
backend/src/pizzas/: api.py  apps.py  models.py  pizzas.json  schemas.py  serializers.py  singals.py  views.py
backend/src/pizzas/migrations/: 0001_initial.py
backend/src/project/: asgi.py  celery.py  containers.py  urls.py
backend/src/project/settings/: __init__.py  api.py  base.py  cache.py  db.py  logging.py
backend/src/seedwork/: exceptions.py  mediator.py  models.py  repositories.py  uows.py
backend/src/seedwork/tests/: test_mediator.py
backend/tests/: conftest.py
frontend/: .gitignore  .prettierrc  dockerfile  package-lock.json  package.json
frontend/src/: index.js
frontend/src/app/: App.jsx  constants.jsx
frontend/src/app/styles/: app.css  app.css.map  app.scss
frontend/src/app/styles/components/: _header.scss
frontend/src/components/: CartItem.jsx  Categories.jsx  Header.jsx  PizzaAddButton.jsx  PizzaItem.jsx  PizzaList.jsx  Sort.jsx
frontend/src/components/PizzaItem/: Skeleton.jsx  index.jsx
frontend/src/pages/: Cart.jsx  Home.jsx
frontend/src/pages/NotFound/: NotFound.module.css  NotFound.module.css.map  index.jsx
